@@ -88,6 +88,8 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CounterExtensionTests.cs" />
+    <Compile Include="GaugeExtensionTests.cs" />
     <Compile Include="MetricInitializationTests.cs" />
     <Compile Include="MetricsTests.cs" />
     <Compile Include="QuantileStreamTests.cs" />
